--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@heroui/button": "^2.2.19",
+    "@heroui/system": "^2.4.15",
+    "@heroui/theme": "^2.4.15",
     "@tailwindcss/vite": "^4.1.5",
+    "dotenv": "^16.5.0",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.10.5",
     "gsap": "^3.13.0",
     "prop-types": "^15.8.1",
